--- a/docs/roadmap.mdx
+++ b/docs/roadmap.mdx
@@ -16,15 +16,15 @@ At Open WebUI, we're committed to continually enhancing our platform to provide 
 Our roadmap for interface innovations aims to create a highly intuitive and accessible platform. These will not only improves user satisfaction but also enhance productivity by reducing the cognitive load on users.
 
 
+- 🔧 **Streamlined Fine-tune Support**: Open WebUI will offer a seamless fine-tuning process by allowing users to automatically build a fine-tune dataset simply by using the interface and rating the responses. We will provide Python notebooks to help preprocess your dataset, making it ready for fine-tuning directly from the notebook. This approach will be super simple and elegantly integrates fine-tuning into user workflows.
+
+- 📈 **Advanced User Tracking and Cost Management Tools**: Users will gain access to comprehensive tools designed for tracking application performance and user activities, as well as managing costs effectively. These tools will empower users with the data they need to make informed decisions, improve user experiences, and maintain budget control, optimizing the use of resources across their AI applications.
+
 - 💬 **"Channels" Feature**: Integrating a built-in chat solution for Open WebUI users that includes AI moderation and assistance capabilities can significantly enhance user engagement and provide timely assistance, improving overall user satisfaction and retention.
 
 - 🧠 **AI Workflow Tool**: A node-based tool to orchestrate and compose multiple aspects of AI systems. This tool will allow users to visually connect different AI modules and services, creating complex workflows with ease. It's designed to empower users to harness the full potential of AI without needing deep technical knowledge in AI programming.
 
-- 📈 **Analytics Dashboard**: A robust analytics platform will allow users to gain insights into their application performance and user activities, empowering them with data to make informed decisions and improve user experiences.
-
 - 🔊 **Local Text-to-Speech Integration**: This feature will allow natural language processing to convert text into lifelike spoken audio, thus making the platform more accessible, especially for visually impaired users. This integration helps in consuming information without screen interaction, facilitating multitasking and improving user engagement.
-
-- 🔧 **Fine-tune Model (LoRA)**: This feature allows users to adjust specific parameters of the model directly through the UI. Fine-tuning can significantly boost the model’s efficiency by adapting it to specific contexts or industries, enhancing personalization and relevancy of responses.
 
 - 📣 **Wakeword Detection**: Incorporating hands-free operation through voice commands will not only enhance accessibility but also align with emerging trends in IoT and smart environments, making our platform future-ready.
 
