Note on model permissions

--- a/docs/getting-started/quick-start/index.mdx
+++ b/docs/getting-started/quick-start/index.mdx
@@ -28,6 +28,7 @@ import CondaWindows from './tab-python/CondaWindows.md';
 - **Admin Creation:** The first account created on Open WebUI gains **Administrator privileges**, controlling user management and system settings.
 - **User Registrations:** Subsequent sign-ups start with **Pending** status, requiring Administrator approval for access.
 - **Privacy and Data Security:** **All your data**, including login details, is **locally stored** on your device. Open WebUI ensures **strict confidentiality** and **no external requests** for enhanced privacy and security.
+  - **All models are private by default.** Models must be explicitly shared via groups or by being made public. If a model is assigned to a group, only members of that group can see it. If a model is made public, anyone on the instance can see it.
 
 :::
 
@@ -44,7 +45,7 @@ Choose your preferred installation method below:
       <TabItem value="docker" label="Docker">
         <div className='mt-5'>
           <ManualDocker />
-          <DataStorage />  
+          <DataStorage />
           <DockerUpdating />
         </div>
       </TabItem>
@@ -153,4 +154,3 @@ Need help? Have questions? Join our community:
 - [GitHub Issues](https://github.com/open-webui/open-webui/issues)
 
 Stay updated with the latest features, troubleshooting tips, and announcements!
-
