New "Chat Sharing" page
New "Chat Sharing" docs page

--- a/docs/features/playgroundbeta/index.mdx
+++ b/docs/features/playgroundbeta/index.mdx
@@ -3,8 +3,4 @@ sidebar_position: 2
 title: "🛝 Playground (Beta)"
 ---
 
-import { TopBanners } from "@site/src/components/TopBanners";
-
-<TopBanners />
-
-Test
+COMING SOON!
