--- a/docs/troubleshooting/password-reset.mdx
+++ b/docs/troubleshooting/password-reset.mdx
@@ -19,9 +19,13 @@ First, you need to create a bcrypt hash of your new password. Run the following 
 htpasswd -bnBC 10 "" your-new-password | tr -d ':\n'
 ```
 
+**Note:** The output will include a bcrypt hash with special characters that need to be handled carefully. Any `$` characters in the hash will need to be triple-escaped (replaced with `\\\`) to be used correctly in the next step.
+
 ### Step 2: Update the Password in Docker 🔄
 
-Next, you'll update the password in your Docker deployment. Replace `HASH` in the command below with the bcrypt hash generated in Step 1. Also, replace `admin@example.com` with the email address linked to your admin account.
+Next, you'll update the password in your Docker deployment. Replace `HASH` in the command below with the bcrypt hash generated in Step 1, making sure to triple-escape any `$` characters. Also, replace `admin@example.com` with the email address linked to your admin account.
+
+**Important:** The following command may not work in all cases. If it doesn't work for you, try the alternative command below it.
 
 ```bash
 docker run --rm -v open-webui:/data alpine/socat EXEC:"bash -c 'apk add sqlite && echo UPDATE auth SET password='\''HASH'\'' WHERE email='\''admin@example.com'\''; | sqlite3 /data/webui.db'", STDIO
@@ -50,3 +54,4 @@ sqlite3 backend/data/webui.db "UPDATE auth SET password='HASH' WHERE email='admi
 ---
 
 📖 By following these straightforward steps, you'll regain access to your Open WebUI admin account in no time. If you encounter any issues during the process, please consider searching for your issue on forums or community platforms.
+```
