--- a/docs/roadmap.mdx
+++ b/docs/roadmap.mdx
@@ -20,7 +20,7 @@ Our roadmap for interface innovations aims to create a highly intuitive and acce
 
 - 📈 **Advanced User Tracking and Cost Management Tools**: Users will gain access to comprehensive tools designed for tracking application performance and user activities, as well as managing costs effectively. These tools will empower users with the data they need to make informed decisions, improve user experiences, and maintain budget control, optimizing the use of resources across their AI applications.
 
-- 💬 **"Channels" Feature**: Integrating a built-in chat solution for Open WebUI users that includes AI moderation and assistance capabilities can significantly enhance user engagement and provide timely assistance, improving overall user satisfaction and retention.
+- 💬 **"Channels" Feature**: Channels will function like Discord/Slack chat rooms, facilitating real-time collaboration among users and AIs. These dedicated communication spaces can host human-to-human interactions or AI-assisted discussions, fostering dynamic and context-driven collaboration.
 
 - 🧠 **AI Workflow Tool**: A node-based tool to orchestrate and compose multiple aspects of AI systems. This tool will allow users to visually connect different AI modules and services, creating complex workflows with ease. It's designed to empower users to harness the full potential of AI without needing deep technical knowledge in AI programming.
 
