--- a/docs/getting-started/quick-start/index.mdx
+++ b/docs/getting-started/quick-start/index.mdx
@@ -140,7 +140,7 @@ After installing, visit:
 - [http://localhost:3000](http://localhost:3000) to access OpenWebUI.
 - or [http://localhost:8080/](http://localhost:8080/) when using a Python deployment.
 
-You are now ready to start **[Using OpenWebUI](../using-openwebui/index.mdx)**!
+You are now ready to start using OpenWebUI!
 
 ## Join the Community
 
