Squashed commit of the following:
commit af900c88030922e779b45c808f83e7618c4465ac
Author: Silentoplayz <50341825+Silentoplayz@users.noreply.github.com>
Date:   Thu Dec 26 14:56:03 2024 -0500

    Update env-configuration.md

    update for v0.4.8 list of env vars

commit 622cd3d6cb8fd7a366521ba40cc8ffe492cf8c52
Merge: ce3429a 41f918c
Author: Timothy Jaeryang Baek <tim@openwebui.com>
Date:   Wed Dec 25 13:31:27 2024 -0800

    Merge pull request #339 from jtslear/main

    Details model default for ComfyUI

commit ce3429a9073991508177c6321a2f3248f78e8392
Author: Timothy Jaeryang Baek <tim@openwebui.com>
Date:   Tue Dec 24 20:37:54 2024 -0700

    refac

commit 7c221579ad5da37fa812808e14d2ef5366e87723
Author: Timothy Jaeryang Baek <tim@openwebui.com>
Date:   Mon Dec 23 13:06:36 2024 -0700

    refac

commit 41f918c4081158f57c3325750a7e6e8b2004356c
Author: John T Skarbek <jtslear@users.noreply.github.com>
Date:   Mon Dec 23 08:45:24 2024 -0500

    Details model default for ComfyUI

    Adds concise detail for the Set Default Model option in the Image configuration pane for ComfyUI

commit 6b2523cf35d5d82e0a115a342b590f57304a8f41
Author: Timothy Jaeryang Baek <tim@openwebui.com>
Date:   Mon Dec 23 01:59:26 2024 -0700

    Update roadmap.mdx

commit 15df6c51c1ebb58ee350fe5258c3fb6143b23c65
Author: Timothy Jaeryang Baek <tim@openwebui.com>
Date:   Sun Dec 22 16:58:14 2024 -0700

    refac

commit dbe6a7261dc42c6ce52aa2573b1f641f2ebe40b6
Merge: 13aec58 142e75b
Author: silentoplayz <50341825+silentoplayz@users.noreply.github.com>
Date:   Sat Dec 21 20:43:20 2024 -0500

    Merge pull request #337 from silentoplayz/main

    Updated DockerUpdating.md page

commit 13aec580d316823497f0b6edf7b3e7b41d0465a1
Author: Timothy Jaeryang Baek <tim@openwebui.com>
Date:   Sat Dec 21 18:21:30 2024 -0700

    Update roadmap.mdx

commit b286d6cb42ad99e55e94da47fc8cdc6e9e5bb2f1
Merge: 6d8b6d9 0bdca8c
Author: silentoplayz <50341825+silentoplayz@users.noreply.github.com>
Date:   Sat Dec 21 1

--- a/docs/roadmap.mdx
+++ b/docs/roadmap.mdx
@@ -20,7 +20,11 @@ Our roadmap for interface innovations aims to create a highly intuitive and acce
 
 - 📈 **Advanced User Tracking and Cost Management Tools**: Users will gain access to comprehensive tools designed for tracking application performance and user activities, as well as managing costs effectively. These tools will empower users with the data they need to make informed decisions, improve user experiences, and maintain budget control, optimizing the use of resources across their AI applications.
 
-- 💬 **"Channels" Feature**: Integrating a built-in chat solution for Open WebUI users that includes AI moderation and assistance capabilities can significantly enhance user engagement and provide timely assistance, improving overall user satisfaction and retention.
+- 💬 **"Channels" Feature**: Channels will function like Discord/Slack chat rooms, facilitating real-time collaboration among users and AIs. These dedicated communication spaces can host human-to-human interactions or AI-assisted discussions, fostering dynamic and context-driven collaboration. As we transition towards multi-agent and proactive agent workflows, true asynchronous communication will be essential, and Open WebUI will provide a Bot SDK tutorial to empower users in building proactive AI agents that can initiate conversations and integrate seamlessly into the platform.
+
+- 👤 **User Page**: A personal User Page feature where users can create posts. The functionality will also include features like followers, likes, and comments. This allows users to effectively share their model configurations, prompts, and files with a broader community, creating a richer, more connected ecosystem around the platform.
+
+- 📝 **AI Powered Notes**: Inspired by tools like Notion and Obsidian, we plan to introduce a robust note-taking feature that includes AI integration. From simple note-taking to full-fledged document creation, this tool will offer a seamless experience, all locally integrated within the platform.
 
 - 🧠 **AI Workflow Tool**: A node-based tool to orchestrate and compose multiple aspects of AI systems. This tool will allow users to visually connect different AI modules and services, creating complex workflows with ease. It's designed to empower users to harness the full potential of AI without needing deep technical knowledge in AI programming.
 
