Revert "Squashed commit of the following:"
This reverts commit 9cdd0c0284556670f1c5bc6215de9fec6e87e136.

--- a/docs/getting-started/advanced-topics/index.mdx
+++ b/docs/getting-started/advanced-topics/index.mdx
@@ -40,3 +40,4 @@ Get essential information for API integration and automation using our models.
 ---
 
 Looking for installation instructions? Head over to our [Quick Start Guide](/getting-started/quick-start).  
+Need to explore core features? Check out [Using OpenWebUI](/getting-started/using-openwebui).
