--- a/docs/features/plugin/migration/index.mdx
+++ b/docs/features/plugin/migration/index.mdx
@@ -174,9 +174,9 @@ from open_webui.main import chat_completion
 from fastapi import Request
 from typing import Any, Optional, Callable
 
-class ChatBotService:
+class Pipe:
     def __init__(self):
-        self.name = "ChatBot"
+        pass
 
     async def handle_request(
         self,
