--- a/docs/features/plugin/migration/index.mdx
+++ b/docs/features/plugin/migration/index.mdx
@@ -123,7 +123,7 @@ Depending on your use case, you can choose between:
 
 2. **`open_webui.utils.chat.generate_chat_completion`:**
     - Directly makes a POST request without handling extra parsing or tasks.
-    - This is the **direct successor** to the previous `ollama.generate_chat_completion` and `openai.generate_chat_completion` functions in Open WebUI 0.4.
+    - This is the **direct successor** to the previous `main.generate_chat_completions`, `ollama.generate_chat_completion` and `openai.generate_chat_completion` functions in Open WebUI 0.4.
     - Best for simplified and more lightweight scenarios.
 
 #### Example:
