--- a/docs/features/plugin/migration/index.mdx
+++ b/docs/features/plugin/migration/index.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_position: 3
-title: "🚚 Migrating Functions: Open WebUI 0.4 to 0.5"
+title: "🚚 Migrating Tools & Functions: 0.4 to 0.5"
 ---
 
 # 🚚 Migration Guide: Open WebUI 0.4 to 0.5
