--- a/docs/features/plugin/functions/index.mdx
+++ b/docs/features/plugin/functions/index.mdx
@@ -19,9 +19,9 @@ There are **three types of Functions** in OpenWebUI, each with a specific purpos
 
 ---
 
-### 1. [**Pipe Function** – Create Custom "Models" ](./pipe.mdx)
+### 1. [**Pipe Function** – Create Custom "Agents/Models" ](./pipe.mdx)
 
-A **Pipe Function** is how you create **custom models** or integrations, which then appear in the interface as if they were standalone models.  
+A **Pipe Function** is how you create **custom agents/models** or integrations, which then appear in the interface as if they were standalone models.  
 
 **What does it do?**  
 - Pipes let you define complex workflows. For instance, you could create a Pipe that sends data to **Model A** and **Model B**, processes their outputs, and combines the results into one finalized answer.
