--- a/docs/tutorials/migration/index.mdx
+++ b/docs/tutorials/migration/index.mdx
@@ -9,7 +9,7 @@ import { TopBanners } from "@site/src/components/TopBanners";
 
 ## Migrating from Internal to External LiteLLM
 
-Previous versions of Open WebUI ran `litellm` internally. To improve modularity and flexibility, we recommend running `litellm` in its own dedicated container. This guide will walk you through the migration process.
+Previous versions (Pre 0.2) of Open WebUI ran `litellm` internally. To improve modularity and flexibility, we recommend running `litellm` in its own dedicated container. This guide will walk you through the migration process.
 
 ### 1. Download Your `config.yaml` File
 
