--- a/docs/troubleshooting/password-reset.mdx
+++ b/docs/troubleshooting/password-reset.mdx
@@ -51,6 +51,41 @@ Now, navigate to the `open-webui` directory on your local machine. Update your p
 sqlite3 backend/data/webui.db "UPDATE auth SET password='HASH' WHERE email='admin@example.com';"
 ```
 
+
+#### Alternate Docker Method
+
+_If you have issues with the above._  I had issues chaining the `bash` commands in `alpine/socat`, _since `bash` doesn't exist._
+
+1. **Run `alpine` linux connected to the open-webui volume.**
+
+    ```bash
+    docker run -it --rm -v open-webui:/path/to/data alpine
+    ```
+    _`/path/to/data` depends on __your__ volume settings._
+
+    1. Install `apache2-utils` and `sqlite`:
+
+        ```sh
+        apk add apache2-utils sqlite
+        ```
+    1. Generate `bcrypt` hash:
+
+        ```sh
+        htpasswd -bnBC 10 "" your-new-password | tr -d ':'
+        ```
+
+    1. Update password:
+
+        ```sh
+        sqlite3 /path/to/data/webui.db
+        ```
+
+        ```sql
+        UPDATE auth SET password='HASH' WHERE email='admin@example.com';
+        -- exit sqlite: [Ctrl + d]
+        ```
+
+        
 ---
 
 📖 By following these straightforward steps, you'll regain access to your Open WebUI admin account in no time. If you encounter any issues during the process, please consider searching for your issue on forums or community platforms.
